; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/mediatek/extr_mtk_soc.c_mtk_detect_cpuclk_rt3883.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/mediatek/extr_mtk_soc.c_mtk_detect_cpuclk_rt3883.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SYSCTL_SYSCFG = common dso_local global i32 0, align 4
@RT3883_CPU_CLKSEL_OFF = common dso_local global i32 0, align 4
@RT3883_CPU_CLKSEL_MSK = common dso_local global i32 0, align 4
@MTK_CPU_CLK_250MHZ = common dso_local global i32 0, align 4
@MTK_CPU_CLK_384MHZ = common dso_local global i32 0, align 4
@MTK_CPU_CLK_480MHZ = common dso_local global i32 0, align 4
@MTK_CPU_CLK_500MHZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @mtk_detect_cpuclk_rt3883 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mtk_detect_cpuclk_rt3883(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @SYSCTL_SYSCFG, align 4
  %10 = call i32 @bus_space_read_4(i32 %7, i32 %8, i32 %9)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* @RT3883_CPU_CLKSEL_OFF, align 4
  %12 = load i32, i32* %6, align 4
  %13 = ashr i32 %12, %11
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* @RT3883_CPU_CLKSEL_MSK, align 4
  %15 = load i32, i32* %6, align 4
  %16 = and i32 %15, %14
  store i32 %16, i32* %6, align 4
  %17 = load i32, i32* %6, align 4
  switch i32 %17, label %26 [
    i32 0, label %18
    i32 1, label %20
    i32 2, label %22
    i32 3, label %24
  ]

18:                                               ; preds = %2
  %19 = load i32, i32* @MTK_CPU_CLK_250MHZ, align 4
  store i32 %19, i32* %3, align 4
  br label %27

20:                                               ; preds = %2
  %21 = load i32, i32* @MTK_CPU_CLK_384MHZ, align 4
  store i32 %21, i32* %3, align 4
  br label %27

22:                                               ; preds = %2
  %23 = load i32, i32* @MTK_CPU_CLK_480MHZ, align 4
  store i32 %23, i32* %3, align 4
  br label %27

24:                                               ; preds = %2
  %25 = load i32, i32* @MTK_CPU_CLK_500MHZ, align 4
  store i32 %25, i32* %3, align 4
  br label %27

26:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %27

27:                                               ; preds = %26, %24, %22, %20, %18
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @bus_space_read_4(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
